--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
     "@mui/material": "^6.4.0",
     "@tanstack/react-query": "^5.64.1",
     "@testing-library/jest-dom": "^6.6.3",
